# NdCpy

./: README.md
DataCopy/: NDCopy.cpp  NDCopy.h  NDCopy2.cpp  NDCopy2.tcc  NDCopyCore.cpp  main.cpp  makefile
DataCopy.xcodeproj/: project.pbxproj
DataCopy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DataCopy.xcodeproj/project.xcworkspace/xcuserdata/shawn.xcuserdatad/: UserInterfaceState.xcuserstate
DataCopy.xcodeproj/xcuserdata/shawn.xcuserdatad/xcschemes/: DataCopy.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt  main.cpp  makefile
src/core/NdCpy/: NDCopy.hpp  NDCopyCore.cpp
src/core/previous/: NDCopy2.cpp  NDCopy2.h  NDCopy2.tcc
src/tests/: test.cpp  test.h
